--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ARL Development</title>
 
-    <link rel="stylesheet" href="/app\index.css">
+    <link rel="stylesheet" href="\app\index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header></header>
+    <header>
+        <Image src = "\res\img\logo\favicon-32x32.png" class="logo"></Image>
+        <p class = title>Alex Romero-Lozano</p>
+        <div id = "navbar">
+            <a>Home</a>
+            <a>About</a>
+            <a>Contact</a>
+        </div>
+    </header>
     <main></main>
     <dynamic></dynamic>
   </body>
