going to test out on actual machine

--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+
+    <script src="app\index.js" type="module"></script>
+    <script src="dep\jquery-3.7.0.min.js" type="module"></script>
   </head>
   <body>
-    <header>
-        <Image src = "\res\img\logo\favicon-32x32.png" class="logo"></Image>
-        <p class = title>Alex Romero-Lozano</p>
-        <div id = "navbar">
-            <a>Home</a>
-            <a>About</a>
-            <a>Contact</a>
-        </div>
-    </header>
-    <main></main>
-    <dynamic></dynamic>
   </body>
 </html>
